--- a/index.html
+++ b/index.html
@@ -315,11 +315,17 @@
     .desert-area {
   margin-top: 14px;
   border-radius: 18px;
-  height: 220px;
+  height: 200px;
+  background: 
+    linear-gradient(to bottom, 
+      #0b1424 0%,        /* Cielo oscuro */
+      #15233c 45%,       /* Tonos más claros del cielo */
+      #c96f28 46%,       /* Comienzo de las dunas */
+      #f4a261 100%       /* Dunas */
+    );
   position: relative;
   overflow: hidden;
   border: 1px solid rgba(255, 215, 0, 0.25);
-  background: linear-gradient(to top, #b36122 0%, #c67a34 30%, #8b4c2d 55%, #2a1a28 100%);
   box-shadow: inset 0 0 25px rgba(0,0,0,0.7);
 }
 
@@ -877,16 +883,18 @@
   let clicks = 0;
 
   function resetLight(){
-    const light = document.getElementById("light");
-    const area = document.getElementById("desert-area");
-    const r = area.getBoundingClientRect();
+  const light = document.getElementById("light");
+  const area = document.getElementById("desert-area");
+  const r = area.getBoundingClientRect();
 
-    const x = Math.random()*(r.width-40)+10;
-    const y = Math.random()*(r.height-40)+10;
+  const x = Math.random() * (r.width - 40) + 10;
 
-    light.style.left = x+"px";
-    light.style.top = y+"px";
-  }
+  // SOLO en la mitad superior
+  const y = Math.random() * (r.height * 0.45 - 40) + 10;
+
+  light.style.left = x + "px";
+  light.style.top = y + "px";
+}
 
   function lightClick(){
     clicks++;
