--- a/index.html
+++ b/index.html
@@ -781,7 +781,7 @@
 
             <div class="final-card-text">
               <p style="font-weight:700; font-size:1.5rem; color:#000;">
-                🧳🧳🧳 Un vuelo hacia Marruecos está esperando día y hora 🧳🧳🧳
+                🧳🧳🧳 Viaje a Marruecos 🧳🧳🧳
               </p>
             </div>
           </div>
