--- a/index.html
+++ b/index.html
@@ -419,6 +419,8 @@
   font-weight: bold;
   font-size: 0.9rem;
   animation: light-pulse 2s ease-in-out infinite;
+   /* ⭐ MOVIMIENTO SUAVE */
+  transition: left 0.6s ease-out, top 0.6s ease-out;
 }
 
 @keyframes light-pulse {
@@ -887,9 +889,11 @@
 
   const x = Math.random() * (r.width - 40) + 10;
 
-  // SOLO en la mitad superior
-  const y = Math.random() * (r.height * 0.45 - 40) + 10;
+  // Evitar valores negativos y mantenerlo en la mitad superior
+  const maxY = Math.max(0, r.height * 0.45 - 40);
+  const y = Math.random() * maxY + 10;
 
+  // ⭐ Movimiento suave gracias al transition del CSS
   light.style.left = x + "px";
   light.style.top = y + "px";
 }
