--- a/index.html
+++ b/index.html
@@ -602,7 +602,7 @@
         </p>
 
         <p style="font-style: italic; text-align:center;">
-          “Quien siga la luz del desierto, hallará un regalo nacido del destino. Firmado: El Mercader”
+          “Quien siga la luz del desierto, hallará su destino. Firmado: El Mercader”
         </p>
 
         <button class="btn" onclick="goTo('screen-story')">Hablar con el Mercader</button>
@@ -756,7 +756,7 @@
 
         <p style="font-style:italic; text-align:center; margin-top:8px;">
           “Dentro de esta caja se esconde un destino…  
-          Cuando tu corazón esté preparado, ábrela, y te revelaré tu destino.”
+          Cuando tu corazón esté preparado, ábrela.”
         </p>
 
         <!-- CAJA CERRADA -->
