--- a/index.html
+++ b/index.html
@@ -487,6 +487,10 @@
   transform-origin: top;
   animation: box-open 1.5s ease-out forwards;
 }
+    #closed-box.final-box {
+  margin-top: -20px !important;
+  margin-bottom: 6px !important;
+}
 
     @keyframes box-open {
       0% { transform: rotateX(90deg); opacity: 0; }
