--- a/index.html
+++ b/index.html
@@ -441,9 +441,8 @@
       overflow: hidden;
     }
     #closed-box {
-      position: relative !important;
-      top: -5px !important; /* Súbela más o menos ajustando este valor */
-      margin-top: 0 !important;   /* Para evitar que el margin-top previo interfiera */
+      margin-top: -20px !important;
+      margin-bottom: 6px !important;
 }
 
     .lid-static {
