--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       opacity: 0.85;
     }
 
-    /* 🧾 PERGAMINOS PARA TEXTOS DEL MERCADER */
+    /* Scroll del mercader */
     .scroll-box {
       background: radial-gradient(circle at top, #f5e1b5 0%, #e0c28b 40%, #c9a56e 100%);
       border-radius: 14px;
@@ -114,33 +114,7 @@
       overflow: hidden;
     }
 
-    .scroll-box::before,
-    .scroll-box::after {
-      content: "";
-      position: absolute;
-      width: 40px;
-      height: 40px;
-      border-radius: 50%;
-      border: 3px solid rgba(255, 255, 255, 0.5);
-      top: -20px;
-      filter: blur(1px);
-      opacity: 0.4;
-    }
-
-    .scroll-box::before {
-      left: -20px;
-    }
-
-    .scroll-box::after {
-      right: -20px;
-    }
-
-    .scroll-text {
-      font-size: 1rem;
-      line-height: 1.45;
-    }
-
-    /* 👤 MARCO ZELLIGE CON AVATAR DEL MERCADER (SILUETA) */
+    /* Mercader avatar */
     .merchant-frame {
       margin: 6px auto 14px;
       width: 160px;
@@ -153,16 +127,14 @@
         linear-gradient(-45deg, #e29578 25%, transparent 25%),
         linear-gradient(45deg, transparent 75%, #ffddd2 75%),
         linear-gradient(-45deg, transparent 75%, #83c5be 75%);
-      background-origin: border-box;
       background-clip: padding-box, border-box, border-box, border-box, border-box;
       box-shadow: 0 6px 18px rgba(0,0,0,0.6);
-      position: relative;
       animation: merchant-glow 4s ease-in-out infinite alternate;
     }
 
     @keyframes merchant-glow {
       0% { box-shadow: 0 6px 18px rgba(0,0,0,0.6); }
-      100% { box-shadow: 0 6px 26px rgba(255, 215, 0, 0.5); }
+      100% { box-shadow: 0 6px 26px rgba(255,215,0,0.5); }
     }
 
     .merchant-inner {
@@ -170,11 +142,10 @@
       height: 100%;
       border-radius: 20px;
       background: radial-gradient(circle at top, #f5e1b5 0%, #d0a96a 40%, #7c4a2e 100%);
-      position: relative;
-      overflow: hidden;
       display: flex;
       align-items: center;
       justify-content: center;
+      overflow: hidden;
     }
 
     .merchant-avatar {
@@ -183,32 +154,26 @@
       position: relative;
     }
 
-    /* cabeza */
     .merchant-avatar::before {
       content: "";
       position: absolute;
       width: 60px;
       height: 60px;
       border-radius: 50%;
-      background:
-        radial-gradient(circle at 30% 30%, rgba(255,255,255,0.5), transparent 55%),
-        linear-gradient(180deg, #362116 0%, #1e130c 100%);
+      background: radial-gradient(circle, #fff, #332);
       top: 5px;
       left: 15px;
-      box-shadow: 0 0 0 3px rgba(250, 240, 210, 0.7);
     }
 
-    /* turbante / capucha */
     .merchant-avatar::after {
       content: "";
       position: absolute;
       width: 80px;
       height: 60px;
-      border-radius: 50% 50% 40% 40%;
       background: linear-gradient(135deg, #5e3023, #3b1f17);
+      border-radius: 50% 50% 40% 40%;
       top: 0;
       left: 5px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.6);
     }
 
     .merchant-body {
@@ -217,49 +182,23 @@
       left: 8px;
       width: 74px;
       height: 60px;
-      border-radius: 50% 50% 10px 10px;
       background: linear-gradient(135deg, #4a2b18, #23120b);
-      box-shadow: 0 -3px 8px rgba(0,0,0,0.6);
+      border-radius: 50% 50% 10px 10px;
     }
 
-    .merchant-spark {
-      position: absolute;
-      font-size: 1.2rem;
-      color: #ffecb3;
-      text-shadow: 0 0 8px rgba(255, 255, 255, 0.9);
-      animation: spark-float 3s ease-in-out infinite;
-    }
-
-    .merchant-spark:nth-child(1) {
-      top: 10px;
-      right: 12px;
-      animation-delay: 0.2s;
-    }
-    .merchant-spark:nth-child(2) {
-      bottom: 8px;
-      left: 16px;
-      animation-delay: 0.7s;
-    }
-
-    @keyframes spark-float {
-      0% { transform: translateY(0); opacity: 0.7; }
-      50% { transform: translateY(-6px); opacity: 1; }
-      100% { transform: translateY(0); opacity: 0.6; }
-    }
-
-    /* OBJETOS */
+    /* Objetos prueba 1 */
     .objects-grid {
       display: grid;
-      grid-template-columns: repeat(2, minmax(0, 1fr));
+      grid-template-columns: repeat(2, 1fr);
       gap: 12px;
       margin-top: 14px;
     }
 
     .object-card {
+      background: rgba(44,29,55,0.85);
       border-radius: 14px;
       padding: 18px;
-      background: rgba(44, 29, 55, 0.85);
-      border: 1px solid rgba(255, 215, 0, 0.3);
+      border: 1px solid rgba(255,215,0,0.3);
       text-align: center;
       cursor: pointer;
       transition: 0.2s;
@@ -272,177 +211,80 @@
 
     .object-card:hover {
       transform: scale(1.06);
-      box-shadow: 0 4px 14px rgba(0,0,0,0.5);
     }
 
-    /* COLORES */
+    /* Colores prueba 2 */
     .colors-row {
       display: flex;
       gap: 12px;
       margin-top: 18px;
-      flex-wrap: wrap;
     }
 
     .color-box {
       flex: 1;
-      min-width: 90px;
       height: 80px;
       border-radius: 14px;
-      padding: 8px;
+      display: flex;
+      align-items: flex-end;
+      justify-content: center;
+      padding-bottom: 6px;
+      border: 2px solid rgba(255,255,255,0.4);
       cursor: pointer;
       color: white;
       font-weight: bold;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.5);
-      display: flex;
-      justify-content: center;
-      align-items: flex-end;
-      border: 2px solid rgba(255, 255, 255, 0.4);
-      transition: 0.2s;
       text-align: center;
+      transition: 0.2s;
     }
 
     .color-box.clicked {
-      transform: scale(0.95);
       opacity: 0.7;
-      outline: 3px solid #ffd54f;
+      transform: scale(0.95);
+      outline: 3px solid gold;
     }
 
-    .color-azul { background: linear-gradient(135deg, #1a4f7a, #1e88e5); }
-    .color-ocre { background: linear-gradient(135deg, #bf8b3b, #ffb74d); }
-    .color-verde { background: linear-gradient(135deg, #00796b, #26a69a); }
+    .color-azul { background: linear-gradient(135deg,#1a4f7a,#1e88e5); }
+    .color-ocre { background: linear-gradient(135deg,#bf8b3b,#ffb74d); }
+    .color-verde { background: linear-gradient(135deg,#00796b,#26a69a); }
 
-    /* DESIERTO */
+    /* Desierto prueba 3 */
     .desert-area {
-  margin-top: 14px;
-  border-radius: 18px;
-  height: 200px;
-  background: 
-    linear-gradient(to bottom, 
-      #0b1424 0%,        /* Cielo oscuro */
-      #15233c 45%,       /* Tonos más claros del cielo */
-      #c96f28 46%,       /* Comienzo de las dunas */
-      #f4a261 100%       /* Dunas */
-    );
-  position: relative;
-  overflow: hidden;
-  border: 1px solid rgba(255, 215, 0, 0.25);
-  box-shadow: inset 0 0 25px rgba(0,0,0,0.7);
-}
-
-/* 🌙 Luna suave */
-.desert-area::before {
-  content: "";
-  position: absolute;
-  top: 10px;
-  right: 16px;
-  width: 45px;
-  height: 45px;
-  border-radius: 50%;
-  background: radial-gradient(circle, #fffdf5 0%, #f5ecd2 50%, rgba(255,255,255,0) 70%);
-  opacity: 0.8;
-  filter: blur(1px);
-}
-
-/* ✨ Estrellas */
-.desert-area::after {
-  content: "✦   ✧   ✦   ✧";
-  position: absolute;
-  top: 0;
-  left: 12px;
-  font-size: 1.3rem;
-  color: rgba(255,255,255,0.5);
-  letter-spacing: 22px;
-  animation: stars-twinkle 4s ease-in-out infinite alternate;
-}
-
-@keyframes stars-twinkle {
-  0% { opacity: .45; }
-  100% { opacity: .9; }
-}
-
-/* 🌬 Calima en movimiento */
-.desert-haze {
-  position: absolute;
-  inset: 0;
-  background: radial-gradient(circle at 50% 120%, rgba(255,225,170,0.25), transparent 70%);
-  animation: haze-move 6s ease-in-out infinite alternate;
-  pointer-events: none;
-}
-
-@keyframes haze-move {
-  0% { transform: translateY(5px); opacity: .7; }
-  100% { transform: translateY(-8px); opacity: 1; }
-}
-
-/* 🏜 Dunas onduladas */
-.dune {
-  position: absolute;
-  width: 140%;
-  height: 100px;
-  left: -20%;
-  border-radius: 50%;
-  background: linear-gradient(to right, #e89a4a, #c0742e);
-  opacity: 0.25;
-  filter: blur(4px);
-}
-
-.dune:nth-child(1) {
-  bottom: 10px;
-}
-.dune:nth-child(2) {
-  bottom: 35px;
-  background: linear-gradient(to right, #e8b16a, #c8883b);
-  opacity: 0.2;
-}
-.dune:nth-child(3) {
-  bottom: 55px;
-  background: linear-gradient(to right, #f3c98a, #d8a35a);
-  opacity: 0.15;
-}
-
-/* 🌟 NUEVA LUZ: estrella con halo mágico */
-.light {
-  position: absolute;
-  width: 36px;
-  height: 36px;
-  border-radius: 50%;
-  background: radial-gradient(circle, #fff3b0 0%, #ffd95b 30%, rgba(255,200,0,0.1) 70%);
-  box-shadow:
-    0 0 15px rgba(255,240,150,0.9),
-    0 0 40px rgba(255,210,100,0.7),
-    0 0 60px rgba(255,185,75,0.5);
-  cursor: pointer;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: #5d3c11;
-  font-weight: bold;
-  font-size: 0.9rem;
-  animation: light-pulse 2s ease-in-out infinite;
-  
-   /* ⭐ MOVIMIENTO SUAVE */
-  transition: left 1s ease-out, top 1s ease-out;
-}
-
-@keyframes light-pulse {
-  0% { transform: scale(0.95); }
-  50% { transform: scale(1.15); }
-  100% { transform: scale(0.95); }
-}
-
-    /* Caja cerrada estática (antes de abrirse) */
-    .closed {
-      background: radial-gradient(circle at top, #f7e3b2 0%, #d8c28a 40%, #ba995d 100%);
-      border: 3px solid #8a6b3b;
-      height: 180px;
+      margin-top: 14px;
+      height: 200px;
+      border-radius: 18px;
+      background: linear-gradient(to bottom,#0b1424 0%,#15233c 45%,#c96f28 46%,#f4a261 100%);
       position: relative;
-      border-radius: 14px;
-      box-shadow: 0 0 18px rgba(255,215,0,0.35);
       overflow: hidden;
+      border: 1px solid rgba(255,215,0,0.25);
+      box-shadow: inset 0 0 25px rgba(0,0,0,0.7);
     }
-    #closed-box {
-      margin-top: -60px !important;
-}
+
+    .light {
+      position: absolute;
+      width: 36px;
+      height: 36px;
+      border-radius: 50%;
+      background: radial-gradient(circle,#fff3b0,#ffd95b);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-weight: bold;
+      box-shadow: 0 0 20px rgba(255,255,200,0.9);
+      cursor: pointer;
+      transition: left 1.4s ease-out, top 1.4s ease-out;
+    }
+
+    /* Caja cerrada */
+    .closed {
+      margin-top: 30px;   /* ←←← FIN DEL PROBLEMA */
+      margin-bottom: 10px;
+      height: 180px;
+      background: radial-gradient(circle at top,#f7e3b2,#d8c28a,#ba995d);
+      border-radius: 14px;
+      border: 3px solid #8a6b3b;
+      position: relative;
+      overflow: hidden;
+      box-shadow: 0 0 18px rgba(255,215,0,0.35);
+    }
 
     .lid-static {
       position: absolute;
@@ -450,46 +292,29 @@
       height: 50%;
       top: 0;
       left: -10%;
-      background: linear-gradient(135deg, #c9a56e, #a98247);
+      background: linear-gradient(135deg,#c9a56e,#a98247);
       border-bottom: 3px solid #7a5a32;
       border-radius: 14px;
-      box-shadow: 0 6px 10px rgba(0,0,0,0.5);
     }
 
-    .closed::after {
-      content: "☾ ✧";
-      position: absolute;
-      bottom: 12px;
-      left: 50%;
-      transform: translateX(-50%);
-      font-size: 1.3rem;
-      color: #4b3318;
-      opacity: 0.6;
-    }
-
-    /* FINAL: Caja mística dorada + luz interior */
+    /* Caja abierta */
     .final-box {
-  margin-top: 60px !important;
-  width: 260px;
-  height: 180px;
-  padding-top: 25px;  /* <--- ESTO HACE QUE EL TEXTO SUBA */
-  display: flex;
-  justify-content: flex-start; /* Coloca contenido arriba */
-  align-items: center;
-  flex-direction: column;
-  background: #f5e4b0;
-  border-radius: 14px;
-  border: 3px solid #b58a3c;
-  position: relative;
-  overflow: hidden;
-  box-shadow: 0 0 18px rgba(255,215,0,0.3);
-  transform-origin: top;
-  animation: box-open 1.5s ease-out forwards;
-}
-    #closed-box.final-box {
-  margin-top: -20px !important;
-  margin-bottom: 6px !important;
-}
+      margin-top: 40px;
+      width: 260px;
+      height: 180px;
+      padding-top: 22px;
+      background: #f5e4b0;
+      border-radius: 14px;
+      border: 3px solid #b58a3c;
+      display: flex;
+      align-items: flex-start;
+      justify-content: center;
+      flex-direction: column;
+      position: relative;
+      overflow: hidden;
+      animation: box-open 1.5s ease-out forwards;
+      transform-origin: top;
+    }
 
     @keyframes box-open {
       0% { transform: rotateX(90deg); opacity: 0; }
@@ -502,12 +327,11 @@
       height: 50%;
       top: 0;
       left: -10%;
-      background: linear-gradient(135deg, #e4c88f, #c19a56);
+      background: linear-gradient(135deg,#e4c88f,#c19a56);
       border-bottom: 3px solid #7a5a32;
       border-radius: 14px;
       transform-origin: top;
       animation: lid-open 1.8s ease forwards;
-      box-shadow: 0 6px 14px rgba(0,0,0,0.6);
     }
 
     @keyframes lid-open {
@@ -518,80 +342,24 @@
     .inner-glow {
       position: absolute;
       inset: 40% 8% 10%;
-      background: radial-gradient(circle at top, rgba(255,255,255,0.95), rgba(255,223,128,0.9), rgba(255,193,7,0.2));
-      filter: blur(1px);
+      background: radial-gradient(circle,rgba(255,255,255,0.95),rgba(255,223,128,0.9));
       opacity: 0;
       animation: glow-rise 1.6s ease-out forwards;
       animation-delay: 0.8s;
     }
 
     @keyframes glow-rise {
-      0% { opacity: 0; transform: translateY(12px) scale(0.96); }
-      100% { opacity: 1; transform: translateY(-6px) scale(1.02); }
+      0% { opacity: 0; transform: translateY(12px); }
+      100% { opacity: 1; transform: translateY(-6px); }
     }
 
-    .sparkles {
-      position: absolute;
-      inset: 0;
-      pointer-events: none;
-    }
-
-    .sparkles span {
-      position: absolute;
-      font-size: 1.1rem;
-      color: #fff8e1;
-      text-shadow: 0 0 8px rgba(255,255,255,0.9);
-      opacity: 0;
-      animation: sparkle-pop 2s ease-out infinite;
-    }
-
-    .sparkles span:nth-child(1) { top: 20%; left: 18%; animation-delay: 0.3s; }
-    .sparkles span:nth-child(2) { top: 15%; right: 15%; animation-delay: 0.7s; }
-    .sparkles span:nth-child(3) { bottom: 18%; left: 30%; animation-delay: 1.1s; }
-    .sparkles span:nth-child(4) { bottom: 22%; right: 25%; animation-delay: 1.5s; }
-
-    @keyframes sparkle-pop {
-      0% { transform: translateY(6px) scale(0.7); opacity: 0; }
-      40% { transform: translateY(-4px) scale(1); opacity: 1; }
-      100% { transform: translateY(-10px) scale(0.8); opacity: 0; }
-    }
-
-    /* Texto dentro de la caja */
     .final-card-text {
-      position: relative;
-      z-index: 5;
+      width: 100%;
       text-align: center;
-      padding-top: 30px;
-      color: #3b2714;
-    }
-
-    .final-card-text p {
-      margin: 4px 0;
-    }
-
-    .camel-container {
-      margin-top: 20px;
-      height: 80px;
-      overflow: hidden;
-      position: relative;
-    }
-
-    .camel {
-      position: absolute;
-      left: -80px;
-      bottom: 0;
-      font-size: 3.2rem;
-      animation: camel-walk 7s linear forwards, camel-bob 1s infinite ease-in-out;
-    }
-
-    @keyframes camel-walk {
-      0% { transform: translateX(0); }
-      100% { transform: translateX(140vw); }
-    }
-
-    @keyframes camel-bob {
-      0%,100% { transform: translateY(0); }
-      50% { transform: translateY(-4px); }
+      margin-top: 10px;
+      color: #000;
+      font-weight: bold;
+      font-size: 1.4rem;
     }
 
   </style>
@@ -736,7 +504,6 @@
 
         <p id="msg3" style="margin-top:12px; text-align:center; font-style:italic;"></p>
       </div>
-
       <!-- 🟢 PANTALLA 6: FINAL -->
       <div id="screen-final" class="screen">
 
@@ -755,7 +522,8 @@
         </div>
 
         <p style="font-style:italic; text-align:center; margin-bottom:10px;">
-          “Has escuchado los ecos del zoco… Has unido los colores de mi tierra… Has seguido la luz del desierto.”
+          “Has escuchado los ecos del zoco… Has unido los colores de mi tierra…  
+          Has seguido la luz del desierto.”
         </p>
 
         <p style="text-align:center;">
@@ -768,7 +536,7 @@
         </p>
 
         <!-- CAJA CERRADA -->
-        <div class="final-box closed" id="closed-box" style="cursor:pointer;">
+        <div class="final-box closed" id="closed-box" style="cursor:pointer; margin-top:18px;">
           <div class="lid-static"></div>
           <p style="text-align:center; margin-top:90px; opacity:0.85; color:#3b2714;">
             (Caja cerrada)
@@ -776,7 +544,6 @@
         </div>
 
         <button class="btn" style="margin-top:20px;" onclick="openFinalBox()">
-          
           Abrir la caja
         </button>
 
@@ -823,7 +590,6 @@
 
     </div>
   </div>
-
 <script>
   /* --- IR A PANTALLA --- */
   function goTo(id){
@@ -892,23 +658,23 @@
   let clicks = 0;
 
   function resetLight(){
-  const light = document.getElementById("light");
-  const area = document.getElementById("desert-area");
-  const r = area.getBoundingClientRect();
+    const light = document.getElementById("light");
+    const area = document.getElementById("desert-area");
+    const r = area.getBoundingClientRect();
 
-  const x = Math.random() * (r.width - 40) + 10;
+    const x = Math.random() * (r.width - 40) + 10;
 
-  // Evitar valores negativos y mantenerlo en la mitad superior
-  const maxY = Math.max(0, r.height * 0.45 - 40);
-  const y = Math.random() * maxY + 10;
+    // Mantener siempre en la mitad superior
+    const maxY = Math.max(0, r.height * 0.45 - 40);
+    const y = Math.random() * maxY + 10;
 
-  // ⭐ Movimiento suave gracias al transition del CSS
-  light.style.left = x + "px";
-  light.style.top = y + "px";
-}
+    light.style.left = x + "px";
+    light.style.top = y + "px";
+  }
 
   function lightClick(){
     clicks++;
+
     if(clicks < 3){
       document.getElementById("msg3").textContent =
         `“Has seguido la estrella ${clicks} vez${clicks>1?"es":""}…”`;
@@ -928,6 +694,7 @@
     // Reiniciar animaciones dentro del final
     const screen = document.getElementById("screen-final");
     const toReset = [".final-box", ".lid", ".inner-glow", ".sparkles span", ".camel"];
+
     toReset.forEach(sel => {
       screen.querySelectorAll(sel).forEach(el => {
         el.style.animation = "none";
@@ -987,6 +754,3 @@
     goTo("screen-intro");
   }
 </script>
-
-</body>
-</html>
