--- a/index.html
+++ b/index.html
@@ -465,14 +465,8 @@
     }
 
     .inner-glow {
-      position: absolute;
-      inset: 40% 8% 10%;
-      background: radial-gradient(circle at top, rgba(255,255,255,0.95), rgba(255,223,128,0.9), rgba(255,193,7,0.2));
-      filter: blur(1px);
-      opacity: 0;
-      animation: glow-rise 1.6s ease-out forwards;
-      animation-delay: 0.8s;
-    }
+  display: none !important;
+}
 
     @keyframes glow-rise {
       0% { opacity: 0; transform: translateY(12px) scale(0.96); }
